# opusify

./: .gitmodules
opusify/: Cargo.toml  build.rs  minimp3.c
opusify/src/: decoded_chunk.rs  lib.rs  libswresample_bindings.rs  minimp3_bindings.rs  mp3.rs  ogg.rs  opus.rs  resample.rs
opusify/src/opus/: mod.rs  ogg.LICENSE  ogg.rs  wrapper.rs
