[package]
name = "opusify"
version = "0.1.0"
edition = "2021"
description = "In Audio, Out Opus"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
bytes = "1.7.1"
hound = "3.5.1"
opusic-sys = "0.5.1"
rayon = "1.10.0"
rubato = "0.15.0"

[build-dependencies]
bindgen = "0.70.1"
cc = { version = "1.1", features = ["parallel"] }
